Bug 1516367 - Move the minidump-analyzer out of the crash reporter application bundle r=spohl,dmajor

The minidump-analyzer tool was originally conceived to be used from the crash
report client and as such was installed in the crash reporter client
application bundle on macOS. It was later adapted to work from Firefox itself
but this caused linking problems when invoked from the Firefox app bundle.
This patch moves the minidump-analyzer into the Firefox app bundle and adapts
the relevant code to find it there.

The minidump-analyzer was also not signed like the rest of our executables and
this patch addresses that issue too.

Differential Revision: https://phabricator.services.mozilla.com/D52910

--HG--
extra : moz-landing-system : lando